init coasters nearby page

--- a/app/Resources/views/page_header.html.twig
+++ b/app/Resources/views/page_header.html.twig
@@ -6,13 +6,15 @@
       </h1>
     </div>
     <div class="heading-elements visible-elements">
-      <div class="form-group">
-        <div class="has-feedback">
-          <input id="search-coaster" type="search" class="form-control border-blue-600 border-lg"
-                 placeholder="{{ 'app.header.search'|trans }}">
-          <div class="form-control-feedback"><i class="icon-search4 text-size-small text-muted"></i></div>
+      <form class="heading-form" action="#">
+        <div class="form-group">
+          <div class="has-feedback">
+            <input id="search-coaster" type="search" class="form-control border-blue-600 border-lg"
+                   placeholder="{{ 'app.header.search'|trans }}">
+            <div class="form-control-feedback"><i class="icon-search4 text-size-small text-muted"></i></div>
+          </div>
         </div>
-      </div>
+      </form>
     </div>
   </div>
 </div>
