--- a/app/Resources/views/sidebar.html.twig
+++ b/app/Resources/views/sidebar.html.twig
@@ -32,7 +32,7 @@
           </li>
           <li>
             <a href="{{ path('search_index') }}">
-              <i class="icon-search4"></i> <span>{{ 'sidebar.search'|trans }}</span>
+              <i class="icon-compass4"></i> <span>{{ 'sidebar.search'|trans }}</span>
             </a>
           </li>
           <li>
