add default filter

--- a/src/BddBundle/Resources/views/Maps/index.html.twig
+++ b/src/BddBundle/Resources/views/Maps/index.html.twig
@@ -31,7 +31,8 @@
               <div class="checkbox checkbox-right checkbox-switchery switchery-xs">
                 <label class="display-block">
                   {{ 'map_index.filter.status'|trans }}
-                  <input name="filters[status]" type="checkbox" class="switchery">
+                  <input name="filters[status]" type="checkbox" class="switchery"
+                         {% if filters.status == "on" %}checked{% endif %}>
                 </label>
               </div>
             </div>
